--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./test_scripts
+test_scripts/
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
