Adjusted gitignore and added run-through directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 test_scripts/
+logs/
+datasets/
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
