--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 test_scripts/
 logs/
 datasets/
+run_through/temp_meshes/
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
